--- a/Lectures/Lecture_13-pre.ipynb
+++ b/Lectures/Lecture_13-pre.ipynb
@@ -234,7 +234,7 @@
     "\n",
     "For a line describing our data with intercept $\\beta_0$ and slope $\\beta_1$, we can quantify how well each of our data points $(x_i, y_i)$ is predicted by this line:\n",
     "\n",
-    "$y_i = \\beta_0 + \\beta_1*x_i + \\epsilon_i$\n",
+    "$\\hat{y}_i = \\beta_0 + \\beta_1 x_i + \\epsilon_i$\n",
     "\n",
     "The $\\epsilon_i$ term here is the *error* term. If this value is 0 for a given data point, it means our line captures that data point perfectly. If it's large (positive or negative), our line is doing a bad job predicting our data at that location.\n"
    ]
@@ -378,9 +378,9 @@
     "\n",
     "Now, our best-fitting line is parameterized by the $\\beta_0$ and $\\beta_1$ values that *minimize sum of squared error*.\n",
     "\n",
-    "$ \\hat{\\beta_0} = \\arg \\min_{\\beta_0} \\sum_{i=1}^{n} {\\epsilon_i}^2 = \\arg \\min_{\\beta_0} SSE $\n",
+    "$ \\hat{\\beta}_0 = \\arg \\min_{\\beta_0} \\sum_{i=1}^{n} {\\epsilon_i}^2 = \\arg \\min_{\\beta_0} SSE $\n",
     "\n",
-    "$ \\hat{\\beta_1} = \\arg \\min_{\\beta_1} \\sum_{i=1}^{n} {\\epsilon_i}^2 = \\arg \\min_{\\beta_1} SSE $\n",
+    "$ \\hat{\\beta}_1 = \\arg \\min_{\\beta_1} \\sum_{i=1}^{n} {\\epsilon_i}^2 = \\arg \\min_{\\beta_1} SSE $\n",
     "\n",
     "This is often called *ordinary least squares (OLS)* regression."
    ]
