--- a/Lectures/Lecture_14-pre.ipynb
+++ b/Lectures/Lecture_14-pre.ipynb
@@ -296,7 +296,7 @@
     "\n",
     "$ R^2 = 1 - \\dfrac{RSS}{TSS} $\n",
     "\n",
-    "$ RSS = \\sum_{i=1}^{n}{(y_i - \\hat{y_i})}^2 $\n",
+    "$ RSS = \\sum_{i=1}^{n}{(y_i - \\hat{y}_i)}^2 $\n",
     "\n",
     "*Where have we seen this before?*\n",
     "\n",
@@ -483,7 +483,7 @@
    "source": [
     "Mean squared error (MSE) is just the *average* of the squared *residuals* or squared error, the same stuff we've been dealing with from the beginning. \n",
     "\n",
-    "$ MSE = \\dfrac{1}{n - 2} \\sum_{i=1}^{n}{(y_i - \\hat{y_i})}^2 = \\dfrac{1}{n - 2} \\sum_{i=1}^{n}{\\epsilon_i}^2 $\n",
+    "$ MSE = \\dfrac{1}{n - 2} \\sum_{i=1}^{n}{(y_i - \\hat{y}_i)}^2 = \\dfrac{1}{n - 2} \\sum_{i=1}^{n}{\\epsilon_i}^2 $\n",
     "\n",
     "This tells you, on average, how close your model was to the true value across all the data points.\n",
     "\n",
