lecture 17 wrap up

--- a/Lectures/Lecture_17-pre.ipynb
+++ b/Lectures/Lecture_17-pre.ipynb
@@ -196,8 +196,7 @@
     "- How it works\n",
     "- Implementing k-NN \"by hand\"\n",
     "- `sklearn` implementation\n",
-    "- Try it out!\n",
-    "- How well does it perform? *...next time!*"
+    "- Try it out!"
    ]
   },
   {
@@ -207,7 +206,7 @@
    "source": [
     "### How it works\n",
     "\n",
-    "The central idea with k-NN is that when you see a new data point that has features $\\theta$ and an *unknown* label $\\alpha$ that you're trying to identify, your best guess is to find the training items whose features ($x$) are *most similar* to $\\theta$ and assume its label is the same as the majority of those \"neighbors\". \n",
+    "The central idea with k-NN is that when you see a new data point that has features $\\theta$ and an *unknown* label $\\lambda$ that you're trying to identify, your best guess is to find the training items whose features ($x$) are *most similar* to $\\theta$ and assume its label is the same as the majority of those \"neighbors\". \n",
     "\n",
     "It's kind of like the cafeteria in Mean Girls...\n",
     "\n",
@@ -218,11 +217,11 @@
     "\n",
     "**Pseudo-code**\n",
     "\n",
-    "Steps for classifying a *new* example with features $\\theta$ and *unknown* label $\\alpha$ (more [here](https://towardsdatascience.com/machine-learning-basics-with-the-k-nearest-neighbors-algorithm-6a6e71d01761)):\n",
+    "Steps for classifying a *new* example with features $\\theta$ and *unknown* label $\\lambda$ (more [here](https://towardsdatascience.com/machine-learning-basics-with-the-k-nearest-neighbors-algorithm-6a6e71d01761)):\n",
     "1. Cycle through all data points with features $x_i$ and *known label* $y_i$.\n",
-    "2. For each known data point, calculate and store the *distance* from its features $x_i$ to our unknown data point's features $\\theta$ (Note: this algorithm relies on a distance function $D(x_1, \\theta_1)$)\n",
+    "2. For each known data point, calculate and store the *distance* from its features $x_i$ to our unknown data point's features $\\theta$ (Note: this algorithm relies on a distance function $D(x_1, \\theta)$)\n",
     "3. After cycling through all known data points, select the $k$ data points whose features are the *shortest* distance to our unknown data point. These are the \"nearest neighbors.\" We choose $k$ ahead of time!\n",
-    "4. Select an estimated label $\\hat{\\alpha}$ for our unknown data point that corresponds to the *most common label* $Y$ among the nearest data points from step 3.\n",
+    "4. Select an estimated label $\\hat{\\lambda}$ for our unknown data point that corresponds to the *most common label* $Y$ among the nearest data points from step 3.\n",
     "\n",
     "\n",
     "![knn_wikipedia](img/knn.png)\n",
@@ -357,7 +356,7 @@
     "\n",
     "For this, we'll use the *Euclidean distance between feature values*, but other approaches work as well.\n",
     "\n",
-    "Here's an illustration of the distance between our point $X$ and a sample training point $\\alpha$:\n",
+    "Here's an illustration of the distance between our test point $X$ and a sample training point $\\alpha$:\n",
     "\n",
     "![knn_distance](img/knn_dist.png)\n",
     "\n",
@@ -553,6 +552,39 @@
     "})\n",
     "\n",
     "knn_eval"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aa04066",
+   "metadata": {},
+   "source": [
+    "NOTE: Just for fun, we can also compare this to the nearest neighbors that we found manually for our sample data point above.\n",
+    "\n",
+    "The `KNeighborsClassifier` `kneighbors` function tells you the closest neighbors in the training set to an individual item."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc34aed5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_sample = np.array(xtest.iloc[8, :]).reshape(1, 2)\n",
+    "\n",
+    "dist, items = knn.kneighbors(X = x_sample, n_neighbors = k)\n",
+    "\n",
+    "dist\n",
+    "items"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0f1a4df",
+   "metadata": {},
+   "source": [
+    "The first array in the return tuple is the distances of the closest items and the second is their indices in the original training data."
    ]
   },
   {
