--- a/Lectures/Lecture_18-pre.ipynb
+++ b/Lectures/Lecture_18-pre.ipynb
@@ -241,6 +241,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ac4bfb1c",
+   "metadata": {},
+   "source": [
+    "Note: this is what the `score` function of the `KNeighborsClassifier` returns as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df220352",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn.score(X = xtest, y = ytest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9678b00f",
    "metadata": {},
    "source": [
@@ -583,7 +601,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "23e0e20f",
    "metadata": {},
@@ -727,12 +744,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62327e67",
+   "cell_type": "markdown",
+   "id": "cb4a2e28",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Hard and Soft Classification\n",
+    "\n",
+    "The $k$-nearest neighbors classifier chooses a predicted label $\\hat{\\alpha}$ for a new set of features $\\theta$ by selecting the *mode* of the labels of the nearest training items. \n",
+    "\n",
+    "In this way, you can think of the nearest neighbors as essentially \"voting\" for the label of each test item. This produces a single label prediction for each test item. Put another way, all the predictions for our test items in the example above are either `'versicolor'` or `'non-versicolor'`. This sort of *decision policy* is referred to as **Hard Classification**. \n",
+    "\n",
+    "**But, it doesn't need to be this way.** We can also represent the \"votes\" of the nearest neighbors as generating a *probability distribution* over $\\hat{\\alpha}$ values. \n",
+    "- For example, if there are 3 nearest neighbors for our new item and 2 are 'versicolor' and 1 is 'non-versicolor', there's a 2/3 chance that the new item should have a label of 'versicolor'. \n",
+    "- Many of the classification algorithms we'll discuss can assign a *probability* of a particular label for a given test item rather than a strict label assignment.\n",
+    "\n",
+    "This form of classification is called **Soft Classification**. \n",
+    "\n",
+    "The `sklearn` `KNeighborsClassifier` class exports a `predict_proba` function that is just like the `predict` function except instead of showing us the *hard predictions* for each test item, it shows us the *soft prediction* probabilities:"
+   ]
   },
   {
    "cell_type": "code",
@@ -740,7 +769,74 @@
    "id": "1dafd813",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x_vals = iris.loc[:, ('sepal_length', 'sepal_width')]\n",
+    "\n",
+    "iris['species_binary'] = iris['species'].map({'versicolor': 'versicolor',\n",
+    "                                             'virginica': 'non-versicolor',\n",
+    "                                             'setosa': 'non-versicolor'})\n",
+    "y_vals = iris.loc[:, 'species_binary']\n",
+    "\n",
+    "\n",
+    "xtrain, xtest, ytrain, ytest = train_test_split(x_vals, y_vals, \n",
+    "                                                test_size = 0.2, # we'll use a small test set here\n",
+    "                                                random_state = 0 # make this process reproducible\n",
+    "                                               )\n",
+    "xtrain = xtrain.reset_index(drop = True)\n",
+    "xtest = xtest.reset_index(drop = True)\n",
+    "ytrain = ytrain.reset_index(drop = True)\n",
+    "ytest = ytest.reset_index(drop = True)\n",
+    "\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors = 3)\n",
+    "\n",
+    "# Train the classifier\n",
+    "knn.fit(X = xtrain, y = ytrain)\n",
+    "\n",
+    "# Here's the original `predict` function\n",
+    "knn.predict(X = xtest)\n",
+    "\n",
+    "# Here's the graded probability prediction\n",
+    "knn.predict_proba(X = xtest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f097a5b",
+   "metadata": {},
+   "source": [
+    "In the predictions above, the first column is the probability of 'versicolor' and the second is the probability of 'non-versicolor'.\n",
+    "\n",
+    "This *Soft Classification* allows us to set more flexible decision policies about what kind of label $\\hat{\\alpha}$ we want to assign to a given test item. Using the *mode* of the nearest neighbor labels in k-NN classification sets a **classification threshold** of 50%, but we could choose any threshold we want depending on the problem.\n",
+    "- In k-NN classification, maybe we want to predict some labels whenever *any* of the neighbors have that label (ex. risk of a fatal disease).\n",
+    "- Or, maybe we only want to predict a particular label if 90% of the neighbors have that label (ex. setting a high parole). \n",
+    "\n",
+    "These different classification thresholds will effect how often we assign a particular label to new pieces of data.\n",
+    "\n",
+    "*Why does this matter?*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f49a384",
+   "metadata": {},
+   "source": [
+    "### Different thresholds change evaluation metrics\n",
+    "\n",
+    "Critically, our choice of classification threshold will affect our evaluation metrics above in predictable ways.\n",
+    "\n",
+    "In our `iris` example above, labeling new data points based on the mode of 3 nearest neighbors sets a threshold of 2/3 for 'versicolor' labels. \n",
+    "\n",
+    "If we set a *lower* threshold of 1/3: \n",
+    "- We will label *more* test items as 'versicolor' since we only need 1 out of 3 neighbors to be 'versicolor'\n",
+    "- We will have a **higher true positive rate** (and **lower false negative rate**) because we are more likely to detect all true versicolor items this way\n",
+    "- But, we will have a **higher false positive rate** (and **lower true negative rate**) since we will label more things as 'versicolor' that shouldn't be due to our low threshold.\n",
+    "\n",
+    "If instead we set a very *high* threshold of 3/3:\n",
+    "- We will label *fewer* test items as 'versicolor' since we now need 3 out of 3 neighbors to be 'versicolor' before labeling a new item 'versicolor'.\n",
+    "- We will have a **lower true positive rate** (and **higher false negative rate**) because we are more likely to pass up on some true versicolor items this way\n",
+    "- We will have a **lower false positive rate** (and **higher true negative rate**) since we will label few things as 'versicolor' that shouldn't be due to our high threshold.\n"
+   ]
   }
  ],
  "metadata": {
