--- a/Lectures/Week6_Overview.ipynb
+++ b/Lectures/Week6_Overview.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "**Lecture 17:** Classification: intro\n",
     "\n",
-    "**Lecture 18:** Classification: logistic regression"
+    "**Lecture 18:** Classification: evaluating classifiers"
    ]
   }
  ],
