lecture 18 wrap up

--- a/Lectures/Lecture_17-post.ipynb
+++ b/Lectures/Lecture_17-post.ipynb
@@ -320,9 +320,9 @@
    "outputs": [],
    "source": [
     "# Training data with label information\n",
-    "sns.scatterplot(data = xtrain, \n",
-    "                x = \"petal_length\", \n",
-    "                y = \"petal_width\", \n",
+    "sns.scatterplot(data = xtrain,\n",
+    "                x = \"petal_length\",\n",
+    "                y = \"petal_width\",\n",
     "                hue = ytrain,\n",
     "                alpha = 0.5\n",
     "               )\n",
@@ -331,7 +331,8 @@
     "                x = \"petal_length\",\n",
     "                y = \"petal_width\",\n",
     "                color = \"k\"\n",
-    "               )"
+    "               )\n",
+    "plt.show()"
    ]
   },
   {
