--- a/Lectures/Lecture_18-pre.ipynb
+++ b/Lectures/Lecture_18-pre.ipynb
@@ -750,11 +750,11 @@
    "source": [
     "### Hard and Soft Classification\n",
     "\n",
-    "The $k$-nearest neighbors classifier chooses a predicted label $\\hat{\\alpha}$ for a new set of features $\\theta$ by selecting the *mode* of the labels of the nearest training items. \n",
+    "The $k$-nearest neighbors classifier chooses a predicted label $\\hat{\\lambda}$ for a new set of features $\\theta$ by selecting the *mode* of the labels of the nearest training items. \n",
     "\n",
     "In this way, you can think of the nearest neighbors as essentially \"voting\" for the label of each test item. This produces a single label prediction for each test item. Put another way, all the predictions for our test items in the example above are either `'versicolor'` or `'non-versicolor'`. This sort of *decision policy* is referred to as **Hard Classification**. \n",
     "\n",
-    "**But, it doesn't need to be this way.** We can also represent the \"votes\" of the nearest neighbors as generating a *probability distribution* over $\\hat{\\alpha}$ values. \n",
+    "**But, it doesn't need to be this way.** We can also represent the \"votes\" of the nearest neighbors as generating a *probability distribution* over $\\hat{\\lambda}$ values. \n",
     "- For example, if there are 3 nearest neighbors for our new item and 2 are 'versicolor' and 1 is 'non-versicolor', there's a 2/3 chance that the new item should have a label of 'versicolor'. \n",
     "- Many of the classification algorithms we'll discuss can assign a *probability* of a particular label for a given test item rather than a strict label assignment.\n",
     "\n",
@@ -805,13 +805,13 @@
    "id": "0f097a5b",
    "metadata": {},
    "source": [
-    "In the predictions above, the first column is the probability of 'versicolor' and the second is the probability of 'non-versicolor'.\n",
+    "In the predictions above, the first column is the probability of 'non-versicolor' and the second is the probability of 'versicolor'.\n",
     "\n",
-    "This *Soft Classification* allows us to set more flexible decision policies about what kind of label $\\hat{\\alpha}$ we want to assign to a given test item. Using the *mode* of the nearest neighbor labels in k-NN classification sets a **classification threshold** of 50%, but we could choose any threshold we want depending on the problem.\n",
-    "- In k-NN classification, maybe we want to predict some labels whenever *any* of the neighbors have that label (ex. risk of a fatal disease).\n",
+    "This *Soft Classification* allows us to set more flexible decision policies about what kind of label $\\hat{\\lambda}$ we want to assign to a given test item. Using the *mode* of the nearest neighbor labels in k-NN classification sets a **classification threshold** of 50% (for binary classification), but we could choose any threshold we want depending on the problem.\n",
+    "- In some cases, we may want to predict a label value whenever *any* of the neighbors have that label (ex. risk of a fatal disease).\n",
     "- Or, maybe we only want to predict a particular label if 90% of the neighbors have that label (ex. setting a high parole). \n",
     "\n",
-    "These different classification thresholds will effect how often we assign a particular label to new pieces of data.\n",
+    "However, the classification threshold we set will effect how often we assign a particular label to new pieces of data.\n",
     "\n",
     "*Why does this matter?*"
    ]
@@ -835,7 +835,330 @@
     "If instead we set a very *high* threshold of 3/3:\n",
     "- We will label *fewer* test items as 'versicolor' since we now need 3 out of 3 neighbors to be 'versicolor' before labeling a new item 'versicolor'.\n",
     "- We will have a **lower true positive rate** (and **higher false negative rate**) because we are more likely to pass up on some true versicolor items this way\n",
-    "- We will have a **lower false positive rate** (and **higher true negative rate**) since we will label few things as 'versicolor' that shouldn't be due to our high threshold.\n"
+    "- We will have a **lower false positive rate** (and **higher true negative rate**) since we will label few things as 'versicolor' that shouldn't be due to our high threshold.\n",
+    "\n",
+    "\n",
+    "Let's illustrate this by looking at this pattern in our data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "847218e1",
+   "metadata": {},
+   "source": [
+    "### ROC curves: expressing accuracy across different thresholds\n",
+    "\n",
+    "Below, we're going to compute the \"versicolor probability\" in our test set from above for a classifier with 5 nearest neighbors.\n",
+    "\n",
+    "Then, we'll look at how different *thresholds* for identifying test items as 'versicolor' change our **true positive rate** and **false positive rate** in opposite directions.\n",
+    "\n",
+    "**Step 1**: use the k-NN `predict_proba` function shown above to get probability values for each test item $p(\\text{'versicolor'})$ rather than hard classifications"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3e73a2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# x_vals = iris.loc[:, ('sepal_length', 'sepal_width')]\n",
+    "\n",
+    "# iris['species_binary'] = iris['species'].map({'versicolor': 'versicolor',\n",
+    "#                                              'virginica': 'non-versicolor',\n",
+    "#                                              'setosa': 'non-versicolor'})\n",
+    "# y_vals = iris.loc[:, 'species_binary']\n",
+    "\n",
+    "\n",
+    "# xtrain, xtest, ytrain, ytest = train_test_split(x_vals, y_vals, \n",
+    "#                                                 test_size = 0.3, # we'll use a small test set here\n",
+    "#                                                 random_state = 0 # make this process reproducible\n",
+    "#                                                )\n",
+    "# xtrain = xtrain.reset_index(drop = True)\n",
+    "# xtest = xtest.reset_index(drop = True)\n",
+    "# ytrain = ytrain.reset_index(drop = True)\n",
+    "# ytest = ytest.reset_index(drop = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6151b052",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn = KNeighborsClassifier(n_neighbors = 5).fit(X = xtrain, y = ytrain)\n",
+    "\n",
+    "# Here's our soft classification with 5 nearest neighbors (converted to dataframe for easier processing)\n",
+    "versicolor_probs = pd.DataFrame(knn.predict_proba(X = xtest),\n",
+    "                                columns = [\"non-versicolor_prob\", \"versicolor_prob\"]\n",
+    "                               )\n",
+    "\n",
+    "# Let's add the true values for comparison\n",
+    "versicolor_probs['true_label'] = ytest\n",
+    "\n",
+    "versicolor_probs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "376a8768",
+   "metadata": {},
+   "source": [
+    "**Step 2**: Now, let's pick a range of *classification thresholds* for 'versicolor' and show how this changes what values we assign to the test items.\n",
+    "\n",
+    "For $k$-nearest neighbors, the thresholds are intuitive because we can break them out by each possible voting arrangement of our 5 neighbors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7bb90c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO make this a loop over keys in a lookup with \"k1_label\": 0.2 etc.\n",
+    "\n",
+    "# Which test items get labeled 'versicolor' if you only need 1 nearest neighbor to be versicolor?\n",
+    "versicolor_probs['k0_label'] = np.where( # np.where is like an \"if-else\" condition for this column value\n",
+    "    versicolor_probs['versicolor_prob'] >= 0, # condition\n",
+    "    'versicolor', # value in all rows where condition above is True\n",
+    "    'non-versicolor' # value in all rows where condition above is False\n",
+    ")\n",
+    "\n",
+    "# Which test items get labeled 'versicolor' if you only need 1 nearest neighbor to be versicolor?\n",
+    "versicolor_probs['k1_label'] = np.where( # np.where is like an \"if-else\" condition for this column value\n",
+    "    versicolor_probs['versicolor_prob'] >= 0.2, # condition\n",
+    "    'versicolor', # value in all rows where condition above is True\n",
+    "    'non-versicolor' # value in all rows where condition above is False\n",
+    ")\n",
+    "\n",
+    "# Which test items get labeled 'versicolor' if you need at least 2 nearest neighbors to be versicolor?\n",
+    "versicolor_probs['k2_label'] = np.where(\n",
+    "    versicolor_probs['versicolor_prob'] >= 0.4,\n",
+    "    'versicolor',\n",
+    "    'non-versicolor'\n",
+    ")\n",
+    "\n",
+    "# Which test items get labeled 'versicolor' if you need at least 3 nearest neighbors to be versicolor?\n",
+    "versicolor_probs['k3_label'] = np.where(\n",
+    "    versicolor_probs['versicolor_prob'] >= 0.6,\n",
+    "    'versicolor',\n",
+    "    'non-versicolor'\n",
+    ")\n",
+    "\n",
+    "# Which test items get labeled 'versicolor' if you need at least 4 nearest neighbors to be versicolor?\n",
+    "versicolor_probs['k4_label'] = np.where(\n",
+    "    versicolor_probs['versicolor_prob'] >= 0.8,\n",
+    "    'versicolor',\n",
+    "    'non-versicolor'\n",
+    ")\n",
+    "\n",
+    "# Which test items get labeled 'versicolor' if you need *all 5* nearest neighbors to be versicolor?\n",
+    "versicolor_probs['k5_label'] = np.where(\n",
+    "    versicolor_probs['versicolor_prob'] >= 1.0,\n",
+    "    'versicolor',\n",
+    "    'non-versicolor'\n",
+    ")\n",
+    "\n",
+    "versicolor_probs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "573634a5",
+   "metadata": {},
+   "source": [
+    "**Step 3**: How do our **true positive rate** and **false positive rate** change for each of these thresholds?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dda8378c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What's the TPR for our lowest threshold (k0) above?\n",
+    "k0_tpr = recall_score(y_true = versicolor_probs['true_label'], \n",
+    "                      y_pred = versicolor_probs['k0_label'],\n",
+    "                      labels = ['versicolor', 'non-versicolor'],\n",
+    "                      pos_label = 'versicolor'\n",
+    "                     )\n",
+    "# What's the FPR for our lowest threshold (k0) above?\n",
+    "# Note FPR = 1 - TNR and TNR is just the recall (TPR) for the *negative* label, which we can set below\n",
+    "k0_fpr = 1 - recall_score(y_true = versicolor_probs['true_label'], \n",
+    "                          y_pred = versicolor_probs['k0_label'],\n",
+    "                          labels = ['versicolor', 'non-versicolor'],\n",
+    "                          pos_label = 'non-versicolor' # positive label\n",
+    "                         )\n",
+    "\n",
+    "# Same as above for k2 threshold\n",
+    "k1_tpr = recall_score(y_true = versicolor_probs['true_label'], \n",
+    "                      y_pred = versicolor_probs['k1_label'],\n",
+    "                      labels = ['versicolor', 'non-versicolor'],\n",
+    "                      pos_label = 'versicolor'\n",
+    "                     )\n",
+    "k1_fpr = 1 - recall_score(y_true = versicolor_probs['true_label'], \n",
+    "                          y_pred = versicolor_probs['k1_label'],\n",
+    "                          labels = ['versicolor', 'non-versicolor'],\n",
+    "                          pos_label = 'non-versicolor' # positive label\n",
+    "                         )\n",
+    "\n",
+    "# Same as above for k2 threshold\n",
+    "k2_tpr = recall_score(y_true = versicolor_probs['true_label'], \n",
+    "                      y_pred = versicolor_probs['k2_label'],\n",
+    "                      labels = ['versicolor', 'non-versicolor'],\n",
+    "                      pos_label = 'versicolor'\n",
+    "                     )\n",
+    "k2_fpr = 1 - recall_score(y_true = versicolor_probs['true_label'], \n",
+    "                          y_pred = versicolor_probs['k2_label'],\n",
+    "                          labels = ['versicolor', 'non-versicolor'],\n",
+    "                          pos_label = 'non-versicolor'\n",
+    "                         )\n",
+    "\n",
+    "# Same as above for k3 threshold\n",
+    "k3_tpr = recall_score(y_true = versicolor_probs['true_label'], \n",
+    "                      y_pred = versicolor_probs['k3_label'],\n",
+    "                      labels = ['versicolor', 'non-versicolor'],\n",
+    "                      pos_label = 'versicolor'\n",
+    "                     )\n",
+    "k3_fpr = 1 - recall_score(y_true = versicolor_probs['true_label'], \n",
+    "                          y_pred = versicolor_probs['k3_label'],\n",
+    "                          labels = ['versicolor', 'non-versicolor'],\n",
+    "                          pos_label = 'non-versicolor'\n",
+    "                         )\n",
+    "\n",
+    "\n",
+    "# Same as above for k4 threshold\n",
+    "k4_tpr = recall_score(y_true = versicolor_probs['true_label'], \n",
+    "                      y_pred = versicolor_probs['k4_label'],\n",
+    "                      labels = ['versicolor', 'non-versicolor'],\n",
+    "                      pos_label = 'versicolor'\n",
+    "                     )\n",
+    "k4_fpr = 1 - recall_score(y_true = versicolor_probs['true_label'], \n",
+    "                          y_pred = versicolor_probs['k4_label'],\n",
+    "                          labels = ['versicolor', 'non-versicolor'],\n",
+    "                          pos_label = 'non-versicolor'\n",
+    "                         )\n",
+    "\n",
+    "# Same as above for k5 threshold\n",
+    "k5_tpr = recall_score(y_true = versicolor_probs['true_label'], \n",
+    "                      y_pred = versicolor_probs['k5_label'],\n",
+    "                      labels = ['versicolor', 'non-versicolor'],\n",
+    "                      pos_label = 'versicolor'\n",
+    "                     )\n",
+    "k5_fpr = 1 - recall_score(y_true = versicolor_probs['true_label'], \n",
+    "                          y_pred = versicolor_probs['k5_label'],\n",
+    "                          labels = ['versicolor', 'non-versicolor'],\n",
+    "                          pos_label = 'non-versicolor'\n",
+    "                         )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad4e057b",
+   "metadata": {},
+   "source": [
+    "Phew! Now let's combine the above to see how they compare:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f99ca68e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For each of our thresholds, what is the true positive rate and the false positive rate?\n",
+    "\n",
+    "np.arange(0, 1.1, 0.2)\n",
+    "roc_df = pd.DataFrame({\n",
+    "    \"threshold\": np.arange(0, 1.1, 0.2),\n",
+    "    \"TPR\": [k0_tpr, k1_tpr, k2_tpr, k3_tpr, k4_tpr, k5_tpr],\n",
+    "    \"FPR\": [k0_fpr, k1_fpr, k2_fpr, k3_fpr, k4_fpr, k5_fpr]\n",
+    "})\n",
+    "\n",
+    "roc_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d54cb75b",
+   "metadata": {},
+   "source": [
+    "Now, our final step is to graph this relationship. \n",
+    "\n",
+    "This is called an **ROC curve** and we'll see why it's useful once we've plotted it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a65452ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ROC curve by hand\n",
+    "\n",
+    "sns.pointplot(\n",
+    "    data = roc_df,\n",
+    "    x = \"FPR\",\n",
+    "    y = \"TPR\"\n",
+    ")\n",
+    "# plt.axline((0, 0), (1, 1), color = 'r')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0902c7bf",
+   "metadata": {},
+   "source": [
+    "## ROC curves in scikit-learn\n",
+    "\n",
+    "Fortunately, we don't need to do all the manual calculations above to generate an ROC curve.\n",
+    "\n",
+    "As usual, `scikit-learn` has us covered!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93171fda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_curve\n",
+    "\n",
+    "\n",
+    "\n",
+    "fpr, tpr, thresholds = roc_curve(\n",
+    "    y_true = ytest,\n",
+    "    y_score = knn.predict_proba(X = xtest)[:, 1],\n",
+    "    pos_label = 'versicolor'\n",
+    ")\n",
+    "\n",
+    "sns.pointplot(\n",
+    "    x = fpr,\n",
+    "    y = tpr\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c39d70a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "\n",
+    "roc_auc_score(\n",
+    "    y_true = ytest,\n",
+    "    y_score = knn.predict_proba(X = xtest)[:, 1],\n",
+    "    labels = ['versicolor', 'non-versicolor']\n",
+    ")"
    ]
   }
  ],
